gabriel updates